<resources>
    <string name="app_name">coffeeGroceryApp</string>

    <string name="thank_you">Thank You</string>
    <string name="order_summary_name">Thank You</string>
    <string name="shopet">SHOP-ET COFFEE CART</string>
    <string name="name_name">Name</string>
    <string name="toppings_name">Toppings</string>
    <string name="whipped_name">Whipped Cream</string>
    <string name="chocolate_name">Chocolate Cream</string>
    <string name="quantity_name">Quantity</string>
    <string name="order_name">Order</string>
    <string name="zero_name">0</string>
    <string name="increment_name">+</string>
    <string name="decrement_name">-</string>
    <string name="hint_name">Name</string>
    <string name="latte_name">Latte</string>
    <string name="expresso_name">Expresso</string>
    <string name="buy">Buy now</string>
    <string name="item">Item Price:</string>


    <string name="price1">2000</string>
    <string name="price2">1500</string>
    <string name="price3">3000</string>
    <string name="price4">4000</string>

    <string name="orderSummary">Order Summary </string>
    <string name="itemN">Item </string>
    <string name="total">Total </string>
    <string name="subtotal">Subtotal</string>
    <string name="orderProgress">Order Status:</string>
    <string name="Progress">IN PROGRESS</string>
    <string name="delivery">Add delivery address to see summary of Order</string>
    <string name="email">Email</string>
    <string name="share">Share</string>

</resources>
